# codex_template

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: example_use.py
src/package_name/: __init__.py  main.py
tests/: test_main.py
